<resources>
    <string name="app_name" translatable="false">WB Tracker</string>
    <string name="save">Save</string>
    <string name="add_item">Add Item</string>
    <string name="add_item_input">URL or vendor code</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Delete?</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="selected">Selected</string>
    <string name="add">Add SKU</string>
    <string name="sort">Sort</string>
    <string name="by_name_asc">Name &#9650;</string>
    <string name="by_name_desc">Name &#9660;</string>
    <string name="by_date_asc">Newest</string>
    <string name="by_date_desc">Oldest</string>
    <string name="refresh">Refresh</string>
    <string name="average_orders_count_per_day">Average orders count per day</string>
    <string name="days_observing">Days observing</string>
    <string name="orders_count">Orders count</string>
    <string name="by_orders_count">By orders count</string>
    <string name="by_orders_count_per_day">By orders count per day</string>
    <string name="by_total_quantity">By total quantity</string>
    <string name="price">Price</string>
    <string name="error_body">Error. Please try again later</string>
    <string name="ok" translatable="false">OK</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="cancel">Cancel</string>
    <string name="orders_count_since_observing_started">Orders count since observing started</string>
    <string name="estimated_income">Estimated income</string>
    <string name="updated">Updated</string>
    <string name="size_name">Size name</string>
    <string name="quantity_in_warehouse">Quantity in warehouse</string>
    <string name="price_with_sale">Price with sale</string>
    <string name="new_group">New group</string>
    <string name="all_items">All items</string>
    <string name="delete_group">Delete group</string>
    <string name="add_to_group">Add to group</string>
    <string name="backup_and_sync">Backup and sync</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_hint">Sign in to enable sync and auto-backup features</string>
    <string name="sign_out_hint">You`re signed in as %1$s</string>
    <string name="sign_out_hint_without_personalization">You`re signed in. Sync and auto-backup features are enabled</string>
    <string name="sign_out_message">You`re successfully signed out</string>
    <string name="please_wait">Please wait…</string>
    <string name="snackbar_account_error_text">Problem occurs with your account</string>
    <string name="system_default">System default</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="theme">Theme</string>
    <string name="warehouses">Warehouses</string>
    <string name="orders">Orders</string>
    <string name="item_deleted">Item deleted</string>
    <string name="undo">Undo</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="rename_group">Rename group</string>
    <string name="by_last_changes">By last changes</string>
    <string name="update_error">Update failure. Last successful update: %1$s</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="sku_id">ID</string>
    <string name="id_copied">ID copied to clipboard</string>
    <string name="group_name">Group name</string>
    <string name="empty_list_hint">Press + to add new SKU</string>
    <string name="items_count_quota">Items count quota exceeded. Max count: %1$s</string>
    <string name="help">Help</string>
    <string name="support_email" translatable="false">support@automotivecodelab.ru</string>
    <string name="add_item_hint">Please add a direct link to SKU you want to track, or use WB vendor code</string>
    <string name="invalid_vendor_code">Invalid vendor code</string>

    <string name="shared_element_container_add_item" translatable="false">shared_element_container_add_item</string>
    <string name="shared_element_container_detail_fragment" translatable="false">shared_element_container_detail_fragment</string>
</resources>