<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_baseline_edit_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never"/>
</menu>