<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- listeners on expand/collapse do not work without collapseActionView -->
    <item android:id="@+id/menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/menu_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_delete_group"
        android:title="@string/delete_group"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_rename_group"
        android:title="@string/rename_group"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_backup"
        android:title="@string/backup_and_sync"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_theme"
        android:title="@string/theme"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_contacts"
        android:title="@string/help"
        app:showAsAction="never"/>
</menu>